--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,7 @@
   <h3 class="text-muted">IncubioApp</h3>
 </div>
 
-<div class="jumbotron" ng-controller="TagManagerController as tagManager">
+<div class="jumbotron" ng-controller="TagmanagerCtrl as tagManager">
   <h1>Please, type below the business idea to be tested</h1>
   <p class="lead">
     <br>
