testos funcionant amb mocha-chai

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" id="mainPageHeader">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
     <li><a ng-href="#">About</a></li>
@@ -27,7 +27,7 @@
     </select>
   </div>
   <div>
-    <b>Found:</b> {{tagManager.MatchingTags}}
+    <b>Found:</b> <div>{{tagManager.MatchingTags}}</div>
   </div>
 
 </div>
